--- a/theme/src/layout/kmom04_minimalistic_vgrid.less
+++ b/theme/src/layout/kmom04_minimalistic_vgrid.less
@@ -31,7 +31,7 @@
 }
 
 .outer-wrap-header {
-    background-color: #898e8e;
+    background-color: #f3f6f6;
     color: #000;
 }
 
@@ -42,7 +42,7 @@
 }
 
 .inner-wrap-header {
-    background-color: #898e8e;
+    background-color: #f3f6f6;
     #desinax-vgrid.grid(100%);
 }
 
@@ -168,7 +168,7 @@ li.level-2 a:hover {
 .region-sidebar-right,
 .region-sidebar-left {
     #desinax-vgrid.column(@columns * 1 / 4);
-    background-color: #8a8f8f;
+    background-color: #f0f3f3;
     color: #000;
 }
 
@@ -231,7 +231,7 @@ li.level-2 a:hover {
     padding: 0.1em;
     flex-direction: row-reverse;
     display: flex;
-    background-color: #575b5b;
+    background-color: #f0f3f3;
     color: #000;
 }
 
@@ -270,7 +270,7 @@ figcaption {
 /* Footer –––––––––––––––––––––––––––– */
 
 .outer-wrap-footer {
-    background-color: #898e8e;
+    background-color: #f3f6f6;
     color: #000;
 }
 
